Refactor build system to use dist/ directory
- Add dist/ to .gitignore
- Update build.sh to output JAR to dist/
- Update build-native.sh to create dist/ and output native binaries there
- Update build-windows.cmd to use dist/ directory
- Update GitHub Actions workflow to use dist/ directory
- Update README.md to reference dist/ directory for usage
- Update Java version references to 17 in badges and CI
- Add native executable patterns to .gitignore